--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist=py27,py3,flake8,pylint,sphinxdoc,check-manifest
 deps=
     -rtest-requirements.txt
 commands=
-    py.test {posargs:-v -n 4 --cov testinfra --cov-report xml --cov-report term test}
+    py.test {posargs:-vvv  -n 4 --cov testinfra --cov-report xml --cov-report term test}
 usedevelop=True
 passenv=HOME TRAVIS DOCKER_CERT_PATH DOCKER_HOST DOCKER_TLS_VERIFY
 
